--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h2>Welcome</h2>
+  <h2>Welcome To Feed The Need</h2>
 </header>
 <h4>&nbsp;&nbsp;&nbsp;&nbsp;Login</h4>
 <br />
@@ -12,7 +12,7 @@
     placeholder="password" ngModel>
   <br />
   <br />
-  &nbsp;&nbsp;&nbsp;&nbsp; <input type="submit" value="Login">
+  &nbsp;&nbsp;&nbsp;&nbsp; <input type="submit" value=" Login ">
 </form>
 &nbsp;
 <br />
