--- a/src/app/home2/home2.component.html
+++ b/src/app/home2/home2.component.html
@@ -1,45 +1,46 @@
 <header>
   <p>
-    welcome
+    Welcome To Feed The Need
   </p>
-  <input type="button" value="Logout" (click)="logout()">
+  <input type="button" value="Logout" (click)="logout()" />
 </header>
 <hr />
 <form #organization="ngForm" (ngSubmit)="organizationdata(organization.value)">
-
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Organisation Name :
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Organisation Name :
   &nbsp;&nbsp;&nbsp;&nbsp;
-  <input type="text" name="orga" ngModel>
-  &nbsp;&nbsp;&nbsp;&nbsp; Phone Number : &nbsp;&nbsp;&nbsp;&nbsp; <input type="text">
+  <input type="text" name="organame" ngModel />
+  &nbsp;&nbsp;&nbsp;&nbsp; Phone Number : &nbsp;&nbsp;&nbsp;&nbsp;
+  <input type="text" name="orgaphno" ngModel />
   <br />
   <br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Address :
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Address :
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <input type="text" name="address" ngModel>
-  &nbsp;&nbsp;&nbsp;&nbsp;
-  City :
+  <input type="text" name="orgaaddress" ngModel />
+  &nbsp;&nbsp;&nbsp;&nbsp; City :
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <input type="text" name="city" ngModel>
+  <input type="text" name="orgacity" ngModel />
   <br />
   <br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  State :
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; State :
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <input type="text" name="state" ngModel>
-  &nbsp;&nbsp;&nbsp;&nbsp;
-  PinCode :
+  <input type="text" name="orgastate" ngModel />
+  &nbsp;&nbsp;&nbsp;&nbsp; PinCode :
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <input type="text" name="pincode" ngModel>
+  <input type="text" name="orgapincode" ngModel />
   <br />
   <br />
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Image :
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <input type="file" (change)="onFileSelected($event)">
+  <input type="file" name="orgaimage" ngModel />
   <br />
   <br />
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <input type="submit" value="Submit">
+  Need's :
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <input type="text" name="organeeds" ngModel />
+  <br />
+  <br />
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <input type="submit" value="Submit" />
 </form>
